$Id$

History for IMDBPHP2
====================

v2.2.3
-------------------
* some cleanup to imdb::plot_split
* IMDB site updates hit us again. Fixed: imdb::awards()

v2.2.2 (02.12.2013)
-------------------
! imdbperson: filmographs had skipped every second entry somehow
! imdbperson: born() and died() got broken due to site changes. Thanks to GeorgeFive for the fix!
! imdb::title() returned an empty string for movies that haven't been released yet
* reworked imdb::title_year() to better handle year-spans (e.g. for serials: "2010-2012")
* imdb: decoding IMDB external site re-directs to target URLs
* imdb::cast() now has an optional parameter $clean_ws (default: FALSE) to remove whitespaces (especially line-breaks) in names
! imdb_person: more adjustments due to site changes to birthname(), nickname(), height(), spouse(), bio(), trivia(), quotes(), trademark(), salary()

v2.2.1 (20.10.2013)
-------------------
! again site changes, this time they broke the personal credits (actors, composers, writers, etc.)
* imdb::yearspan() didn't catch all "delimiters" used on the IMDB sites
+ added new config option "language" (see mdb_config for details – and thanx to strikedaemon for the code!)
* changed a bunch of methods from private to protected, to allow overriding them by extension classes
! IMDB decided to introduce another /genre/ link to most popular genres, which messed up the genre() method
! imdb::plot() and imdb::plot_split() were broken due to another site change

v2.2.0 (22.09.2013)
-------------------
+ introduced the possibility to override config vars using simple *.ini files (see conf/*)
- removed Moviepilot classes (the service is no longer operational via its API)
! fixes to cache.php (listed the same movie over and over)
* doc/README updated
+ cache.php now uses glob() to speed up file finding
* some minor code cleanup
+ added some more example code to doc/examples

v2.1.9 (19.09.2013)
-------------------