@@ -7,6 +7,7 @@ v2.2.3
 -------------------
 * some cleanup to imdb::plot_split
 * IMDB site updates hit us again. Fixed: imdb::awards()
+! Episode search was broken due to incomplete redirect handling in imdbsearch::results()
 
 v2.2.2 (02.12.2013)
 -------------------
